tercer commit 31 enero

--- a/about-us.html
+++ b/about-us.html
@@ -188,7 +188,7 @@
                 <div class="col-md-4 col-sm-6 single-team">
                     <div class="inner">                            
                         <div class="team-img">
-                            <img src="images/certificado1.jpg" alt="">   
+                            <img src="images/certificado1.JPG" alt="">   
                         </div>
                         <div class="team-content">
                             <h4>Certificado</h4>
