--- a/faqs.html
+++ b/faqs.html
@@ -82,7 +82,7 @@
     </header><!--/header-->
 
 
-    <div class="page-title" style="background-image: url(images/fondopantalla2.jpg)">
+    <div class="page-title" style="background-color:  #333333">
         <h1>Preguntas Frecuentes</h1>
     </div>
 
