--- a/portfolio.html
+++ b/portfolio.html
@@ -206,10 +206,10 @@
 
                     <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/galeria01.jpg" alt="">
+                            <img class="img-responsive" src="images/portfolio/galeria01.JPG" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/galeria01.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a class="preview" href="images/portfolio/galeria01.JPG" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -218,10 +218,10 @@
 
                     <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/galeria02.jpg" alt="">
+                            <img class="img-responsive" src="images/portfolio/galeria02.JPG" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/galeria02.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a class="preview" href="images/portfolio/galeria02.JPG" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -230,10 +230,10 @@
 
                     <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/galeria03.jpg" alt="">
+                            <img class="img-responsive" src="images/portfolio/galeria03.JPG" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/galeria03.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a class="preview" href="images/portfolio/galeria03.JPG" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -242,10 +242,10 @@
 
                     <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/galeria04.jpg" alt="">
+                            <img class="img-responsive" src="images/portfolio/galeria04.JPG" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/galeria04.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a class="preview" href="images/portfolio/galeria04.JPG" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -254,10 +254,10 @@
 
                     <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/galeria05.jpg" alt="">
+                            <img class="img-responsive" src="images/portfolio/galeria05.JPG" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/galeria05.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a class="preview" href="images/portfolio/galeria05.JPG" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
