actualice contacto php 359pm

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <li><a href="precios">Precios</a></li>
                         <li><a href="promos">Promociones</a></li>
                         <li><a href="portfolio">Galería</a></li>
-                        <li><a href="contacto">Solicita una cita</a></li>
+                        <li><a href="contacto.php">Solicita una cita</a></li>
                     </ul>
                 </div>
             </div>
