--- a/about-us.html
+++ b/about-us.html
@@ -98,7 +98,7 @@
                 <div class="col-md-5">
                     <div class="about-content">
                         <h2> C.D. ALBA NYDIA AGUILAR IBARRA <br> CEDULA PROFESIONAL 5090624 </h2>
-                        <p> Dra. Alba Nydia Aguilar Te ofrece servicios dentales de Primer Nivel, está comprometida con la innovación en materiales de la mejor calidad.  <br>Cree en la Educación Continua que debe tener todo Profesional, por esa razón está en constante adiestramiento Dental.</p>
+                        <p> C.D.. Alba Nydia Aguilar te ofrece servicios dentales de Primer Nivel, está comprometida con la innovación en materiales de la mejor calidad.  <br>Cree en la Educación Continua que debe tener todo Profesional, por esa razón está en constante adiestramiento Dental.</p>
                     </div>
                 </div>
             </div>
@@ -168,8 +168,8 @@
     <section id="team-area">
         <div class="container">
             <div class="center fadeInDown">
-                <h2>Doctora Alba Aguilar Ibarra</h2>
-                <p class="lead">La doctora Alba Aguilar especialista en cirugias y diseño de sonrisas es una <br>persona en preparación constante para dar la mejor atención a sus pacientes.</p>
+                <h2>C.D. Alba Nydia Aguilar Ibarra</h2>
+                <p class="lead">La C.D. Alba Nydia Aguilar Ibarra especialista en cirugias y diseño de sonrisas es una <br>persona en preparación constante para dar la mejor atención a sus pacientes.</p>
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 single-team">
@@ -178,7 +178,7 @@
                             <img src="images/doctoraAlba2.jpg" alt="">
                         </div>
                         <div class="team-content">
-                            <h4>Doctora Alba Aguilar Ibarra</h4>
+                            <h4>C.D. Alba Nydia Aguilar Ibarra</h4>
                             <span class="desg">Especialidad en Endodoncia</span>
                         </div>
                     </div>
