--- a/about-us_en.html
+++ b/about-us_en.html
@@ -34,7 +34,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
                         <div class="top-number">
-                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  01 (52) 329 298 2527
+                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  001+ (52) 329 298 2527
                                 <a href="index" style="color:  #71bc56"> <strong> : : Español</strong></a>
                               </p>
                         </div>
@@ -98,7 +98,7 @@
                 <div class="col-md-5">
                     <div class="about-content">
                         <h2> C.D. ALBA NYDIA AGUILAR IBARRA <br> PROFESSIONAL CEDULA 5090624 </h2>
-                        <p> Dr. Alba Nydia Aguilar Offers you first level dental services, is committed to innovation in materials of the highest quality. <br>He believes in Continuing Education that every Professional must have, for that reason he is in constant Dental training.</p>
+                        <p> C.D. Alba Nydia Aguilar Ibarra Offers you first level dental services, is committed to innovation in materials of the highest quality. <br>He believes in Continuing Education that every Professional must have, for that reason he is in constant Dental training.</p>
                     </div>
                 </div>
             </div>
@@ -168,8 +168,8 @@
     <section id="team-area">
         <div class="container">
             <div class="center fadeInDown">
-                <h2>Doctora Alba Aguilar Ibarra</h2>
-                <p class="lead">Dr. Alba Aguilar specialist in surgeries and design of smiles is a person<br>in constant preparation to give the best care to their patients.</p>
+                <h2>C.D. Alba Nydia Aguilar Ibarra</h2>
+                <p class="lead">C.D. Alba Nydia Aguilar Ibarra specialist in surgeries and design of smiles is a person<br>in constant preparation to give the best care to their patients.</p>
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 single-team">
@@ -178,7 +178,7 @@
                             <img src="images/doctoraAlba2.jpg" alt="">
                         </div>
                         <div class="team-content">
-                            <h4>Doctora Alba Aguilar Ibarra</h4>
+                            <h4>C.D. Alba Nydia Aguilar Ibarra</h4>
                             <span class="desg">Specialty in Endodontics</span>
                         </div>
                     </div>
@@ -257,7 +257,7 @@
                         <div class="col-md-3 col-sm-6">
                                 <div class="widget">                                    
                                         <h3>BUCERIAS DENTIST</h3>
-                                        <p>Pacifico street 57 Bucerias downtown<br> Bucerias Nayarit, México. <br> Phone 01  329 29 82527 <br> dentistabucerias@gmail.com</p>                                    
+                                        <p>Pacifico street 57 Bucerias downtown<br> Bucerias Nayarit, México. <br> Phone 001+ (52) 329 298 2527<br> dentistabucerias@gmail.com</p>                                    
                                     </div>
                         </div>
                         <!--/.col-md-3-->
