--- a/contact-us_en.html
+++ b/contact-us_en.html
@@ -34,7 +34,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
                         <div class="top-number">
-                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  01 (52) 329 298 2527
+                            <p style="color: #333"><a href="tel:001+523292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  001+ (52) 329 298 2527
                                 <a href="index" style="color:  #71bc56"> <strong> : : Español</strong></a>
                               </p>
                         </div>
@@ -107,10 +107,10 @@
                             <label>Phone</label>
                             <input type="number" name="tel" class="form-control">
                         </div>
-                        <div class="form-group">
+                        <!--<div class="form-group">
                             <label>Company name</label>
                             <input type="text" name="empresa" class="form-control">
-                        </div>                        
+                        </div>-->                        
                     </div>
                     <div class="col-sm-5">
                         <div class="form-group">
@@ -144,7 +144,7 @@
                         <div class="col-md-3 col-sm-6">
                                 <div class="widget">                                    
                                         <h3>BUCERIAS DENTIST</h3>
-                                        <p>Pacifico street 57 Bucerias downtown<br> Bucerias Nayarit, México. <br> Phone 01  329 29 82527 <br> dentistabucerias@gmail.com</p>                                    
+                                        <p>Pacifico street 57 Bucerias downtown<br> Bucerias Nayarit, México. <br> Phone 001+ (52)  329 29 82527 <br> dentistabucerias@gmail.com</p>                                    
                                     </div>
                         </div>
                         <!--/.col-md-3-->
