--- a/index.html
+++ b/index.html
@@ -91,17 +91,19 @@
                 <li data-target="#main-slider" data-slide-to="0" class="active"></li>
                 <li data-target="#main-slider" data-slide-to="1"></li>
                 <li data-target="#main-slider" data-slide-to="2"></li>
+                <li data-target="#main-slider" data-slide-to="3"></li>
+                <li data-target="#main-slider" data-slide-to="4"></li>
             </ol>
             <div class="carousel-inner">
 
-                <div class="item active" style="background-image: url(images/slider/bannerDental1.jpg)">
+                <div class="item active" style="background-image: url(images/slider/bannerDental1_1.jpg)">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-7">
                                 <div class="carousel-content">
                                     <h1 class="animation animated-item-1" style="color: #333;">Tu sonrisa es importante para nosotros</h1>
                                     <div class="animation animated-item-2" style="color: #333;">
-                                        Dentista Bucerias es una clínica dental accesible en Puerto Vallarta que brinda atención profesional en los campos de estética, conservación y reconstrucción dental.
+                                        Dentista Bucerias es una clínica dental accesible en Bahía de Banderas y Puerto Vallarta que brinda atención profesional en los campos de estética, conservación y reconstrucción dental.
                                     </div>
                                     <a class="btn-slide animation animated-item-3" href="services">Servicios</a>
                                     <a class="btn-slide white animation animated-item-3" href="contact-us" style="color: #333;">Solicita una cita</a>
@@ -113,7 +115,27 @@
                 </div>
                 <!--/.item-->
 
-                <div class="item" style="background-image: url(images/slider/bannerDental7.jpg)">
+                <div class="item" style="background-image: url(images/slider/principal.JPG)">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-7">
+                                <div class="carousel-content">
+                                    <h1 class="animation animated-item-1">¡Más que limpios... Dientes increiblemente limpios!</h1>
+                                    <div class="animation animated-item-2">
+                                        La limpieza dental profesional se debe realizar cada 6 a 12 meses para asegurar condiciones óptimas en el cuidado y mantenimiento de la salud de dientes y encías. 
+                                    </div>
+                                    <a class="btn-slide white animation animated-item-3" href="services">Servicios</a>
+                                    <a class="btn-slide animation animated-item-3" href="contact-us">Solicita un cita</a>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+                  <!--/.item-->
+
+                  <div class="item" style="background-image: url(images/slider/masblancos.JPG)">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-7">
@@ -132,6 +154,29 @@
                     </div>
                 </div>
                 <!--/.item yo agregué aquí-->
+
+                 <!--/.item-->
+
+                 <div class="item" style="background-image: url(images/slider/maslimpios.jpg)">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-7">
+                                <div class="carousel-content">
+                                    <h1 class="animation animated-item-1">¡Más que limpios... Dientes increiblemente limpios!</h1>
+                                    <div class="animation animated-item-2">
+                                        La limpieza dental profesional se debe realizar cada 6 a 12 meses para asegurar condiciones óptimas en el cuidado y mantenimiento de la salud de dientes y encías. 
+                                    </div>
+                                    <a class="btn-slide white animation animated-item-3" href="services">Servicios</a>
+                                    <a class="btn-slide animation animated-item-3" href="contact-us">Solicita un cita</a>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+                <!--/.item yo agregué aquí-->
+
                 <div class="item" style="background-image: url(images/slider/bannerDental4.jpg)">
                     <div class="container">
                         <div class="row">
@@ -168,6 +213,7 @@
         <div class="container">
             <div class="center fadeInDown">
                 <h2>Dentista Bucerias te ofrece</h2>
+                <h2>C.D. Alba Nydia Aguilar Ibarra</h2>
                 <p class="lead">Nuestro compromiso con nuestros pacientes es otorgar un seguimiento continuo en sus tratamientos</p>
             </div>
 
@@ -232,10 +278,10 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4 single-work">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/reciente10.png" alt="">
+                        <img class="img-responsive" src="images/portfolio/trabrec1.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/reciente10.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                <a class="preview" href="images/portfolio/trabrec1.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -243,10 +289,10 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-4 single-work">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/reciente5.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/trabrec2.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/reciente5.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                <a class="preview" href="images/portfolio/trabrec2.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -254,10 +300,10 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-4 single-work">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/reciente14.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/trabrec3.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/reciente14.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                <a class="preview" href="images/portfolio/trabrec3.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                     </div>  
@@ -265,10 +311,10 @@
  
                 <div class="col-xs-12 col-sm-6 col-md-4 single-work">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/reciente15.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/trabrec6.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/reciente15.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                <a class="preview" href="images/portfolio/trabrec6.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -276,10 +322,10 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-4 single-work">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/reciente1.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/trabrec4.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/reciente1.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                <a class="preview" href="images/portfolio/trabrec4.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -319,7 +365,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">                                
-                            <img class="img-responsive" src="images/services/020-checkup.svg">
+                            <img class="img-responsive" src="images/gallery/smiledesign.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Diseño de Sonrisa</h3>
@@ -331,7 +377,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/011-tooth-2.svg">
+                            <img class="img-responsive" src="images/gallery/carillas.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Carillas  y Coronas Porcelana</h3>
@@ -343,7 +389,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/012-tooth-1.svg">
+                            <img class="img-responsive" src="images/gallery/implantes.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Implantes Dentales</h3>
@@ -355,7 +401,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/008-dentist-2.svg">
+                            <img class="img-responsive" src="images/gallery/resinas.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Resinas</h3>
@@ -367,7 +413,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/011-dental-care-3.svg">
+                            <img class="img-responsive" src="images/gallery/endodoncia.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Endodoncia</h3>
@@ -397,7 +443,7 @@
 
     <!--/#middle-->
 
-   <section id="testimonial">
+   <!--<section id="testimonial">
     <div class="container">
         <div class="center fadeInDown">
             <h2>Comentarios de nuestros clientes</h2>
@@ -466,7 +512,7 @@
             </div>
         </div>
     </div>
-    </section>
+    </section>-->
 
 
     <section class="map"> 
