--- a/promos.html
+++ b/promos.html
@@ -99,7 +99,7 @@
                     <div class="about-content">
                         <h2>Promociones del Mes </h2>
                         <p> <strong>Promoción para tus niños</strong><br> Revisión, consulta, limpieza dental y aplicación de barniz fluor $350 pesos. <br>
-                                <strong>Promocion ven con tu pareja</strong><br>
+                                <strong>Promoción ven con tu pareja</strong><br>
                                 2 limpiezas por $600 pesos en el mismo dia! <br>
                                 <strong>Promoción general</strong> <br>15% descuento a partir de 3 coronas <br>
                                 Aplica solo en Febrero
