--- a/contact-us.html
+++ b/contact-us.html
@@ -107,10 +107,10 @@
                             <label>Teléfono</label>
                             <input type="number" name="tel" class="form-control">
                         </div>
-                        <div class="form-group">
+                        <!--<div class="form-group">
                             <label>Datos de tu empresa</label>
                             <input type="text" name="empresa" class="form-control">
-                        </div>                        
+                        </div> -->                       
                     </div>
                     <div class="col-sm-5">
                         <div class="form-group">
