--- a/principal.html
+++ b/principal.html
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
                         <div class="top-number">
-                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  01 (52) 329 298 2527
+                            <p style="color: #333"><a href="tel:001523292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  001+ (52) 329 298 2527
                                 <a href="index" style="color:  #71bc56"> <strong> : : Español</strong></a>
                               </p>
                         </div>
@@ -91,7 +91,7 @@
                 <li data-target="#main-slider" data-slide-to="0" class="active"></li>
                 <li data-target="#main-slider" data-slide-to="1"></li>
                 <li data-target="#main-slider" data-slide-to="2"></li>
-            </ol>
+            </ol> 
             <div class="carousel-inner">
 
                 <div class="item active" style="background-image: url(images/slider/bannerDental1.jpg)">
@@ -101,7 +101,7 @@
                                 <div class="carousel-content">
                                     <h1 class="animation animated-item-1" style="color: #333;">We care about your smile</h1>
                                     <div class="animation animated-item-2" style="color: #333;">
-                                       Bucerias Dentist is an accessible dental clinic in Puerto Vallarta that provides professional attention in the fields of aesthetics, conservation and dental reconstruction.
+                                       Bucerias Dentist is an accessible dental clinic in Bahía de Banderas and Puerto Vallarta that provides professional attention in the fields of aesthetics, conservation and dental reconstruction.
                                     </div>
                                     <a class="btn-slide animation animated-item-3" href="services_en">Services</a>
                                     <a class="btn-slide white animation animated-item-3" href="contact-us_en" style="color: #333;">Request Appointment</a>
@@ -168,6 +168,7 @@
         <div class="container">
             <div class="center fadeInDown">
                 <h2>Dentist Bucerias offers you</h2>
+                <h2>C.D. Alba Nydia Aguilar Ibarra</h2>
                 <p class="lead">Our commitment to our patients is to provide continuous monitoring of their treatments</p>
             </div>
 
@@ -232,10 +233,10 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4 single-work">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/reciente10.png" alt="">
+                        <img class="img-responsive" src="images/portfolio/trabrec1.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/reciente10.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                <a class="preview" href="images/portfolio/trabrec1.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -243,10 +244,10 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-4 single-work">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/reciente5.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/trabrec2.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/reciente5.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                <a class="preview" href="images/portfolio/trabrec2.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -254,10 +255,10 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-4 single-work">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/reciente14.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/trabrec3.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/reciente14.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                <a class="preview" href="images/portfolio/trabrec3.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                     </div>  
@@ -265,10 +266,10 @@
  
                 <div class="col-xs-12 col-sm-6 col-md-4 single-work">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/reciente15.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/trabrec6.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/reciente15.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                <a class="preview" href="images/portfolio/trabrec6.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -276,10 +277,10 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-4 single-work">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/reciente1.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/trabrec4.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/reciente1.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                <a class="preview" href="images/portfolio/trabrec4.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -319,7 +320,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">                                
-                            <img class="img-responsive" src="images/services/020-checkup.svg">
+                            <img class="img-responsive" src="images/gallery/smiledesign.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Smile design</h3>
@@ -331,7 +332,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/011-tooth-2.svg">
+                            <img class="img-responsive" src="images/gallery/carillas.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Veneers and Crowns Porcelain</h3>
@@ -343,7 +344,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/012-tooth-1.svg">
+                            <img class="img-responsive" src="images/gallery/implantes.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Dental implants</h3>
@@ -355,7 +356,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/008-dentist-2.svg">
+                            <img class="img-responsive" src="images/gallery/resinas.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Resins</h3>
@@ -367,7 +368,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/011-dental-care-3.svg">
+                            <img class="img-responsive" src="images/gallery/endodoncia.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Endodontics</h3>
@@ -397,7 +398,7 @@
 
     <!--/#middle-->
 
-   <section id="testimonial">
+  <!-- <section id="testimonial">
     <div class="container">
         <div class="center fadeInDown">
             <h2>Reviews</h2>
@@ -466,7 +467,7 @@
             </div>
         </div>
     </div>
-    </section>
+    </section>-->
 
 
     <section class="map"> 
@@ -496,7 +497,7 @@
                             <div class="col-md-3 col-sm-6">
                                     <div class="widget">                                    
                                             <h3>BUCERIAS DENTIST</h3>
-                                            <p>Pacifico street 57 Bucerias downtown<br> Bucerias Nayarit, México. <br> Phone 01  329 29 82527 <br> dentistabucerias@gmail.com</p>                                    
+                                            <p>Pacifico street 57 Bucerias downtown<br> Bucerias Nayarit, México. <br> Phone 001+ (52) 329 298 2527 <br> dentistabucerias@gmail.com</p>                                    
                                         </div>
                             </div>
                             <!--/.col-md-3-->
