--- a/services.html
+++ b/services.html
@@ -99,7 +99,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">                                
-                            <img class="img-responsive" src="images/services/020-checkup.svg">
+                            <img class="img-responsive" src="images/gallery/smiledesign.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Diseño de Sonrisa</h3>
@@ -111,7 +111,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/011-tooth-2.svg">
+                            <img class="img-responsive" src="images/gallery/carillas.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Carillas  y Coronas Porcelana</h3>
@@ -123,7 +123,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/012-tooth-1.svg">
+                            <img class="img-responsive" src="images/gallery/implantes.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Implantes Dentales</h3>
@@ -135,7 +135,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/008-dentist-2.svg">
+                            <img class="img-responsive" src="images/gallery/resinas.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Resinas</h3>
@@ -147,7 +147,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/011-dental-care-3.svg">
+                            <img class="img-responsive" src="images/gallery/endodoncia.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Endodoncia</h3>
@@ -172,11 +172,11 @@
             <!--/.row-->
         </div>
         <!--/.container-->
-    </section>
+    </section>  
     <!--/#services-->
 
 
-    <section id="testimonial">
+   <!-- <section id="testimonial">
         <div class="container">
             <div class="center fadeInDown">
                 <h2>Comentarios de nuestros clientes</h2>
@@ -245,7 +245,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     
     <section id="bottom">
