--- a/services_en.html
+++ b/services_en.html
@@ -39,7 +39,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
                         <div class="top-number">
-                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  01 (52) 329 298 2527
+                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  001+ (52) 329 298 2527
                                 <a href="index" style="color:  #71bc56"> <strong> : : Español</strong></a>
                               </p>
                         </div>
@@ -180,7 +180,7 @@
     <!--/#services-->
 
 
-    <section id="testimonial">
+    <!--<section id="testimonial">
         <div class="container">
             <div class="center fadeInDown">
                 <h2>Reviews</h2>
@@ -249,7 +249,7 @@
                 </div>
             </div>
         </div>
-        </section>
+        </section>-->
     
 
     
@@ -266,7 +266,7 @@
                             <div class="col-md-3 col-sm-6">
                                     <div class="widget">                                    
                                             <h3>BUCERIAS DENTIST</h3>
-                                            <p>Pacifico street 57 Bucerias downtown<br> Bucerias Nayarit, México. <br> Phone 01  329 29 82527 <br> dentistabucerias@gmail.com</p>                                    
+                                            <p>Pacifico street 57 Bucerias downtown<br> Bucerias Nayarit, México. <br> Phone 001+ (52) 329 298 2527 <br> dentistabucerias@gmail.com</p>                                    
                                         </div>
                             </div>
                             <!--/.col-md-3-->
