--- a/terms.html
+++ b/terms.html
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
                         <div class="top-number">
-                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  01 (52) 329 298 2527
+                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i> 001+ (52) 329 298 2527
                                 <a href="index" style="color:  #71bc56"> <strong> : : Español</strong></a>
                               </p>
                         </div>
@@ -133,7 +133,7 @@
                         <div class="col-md-3 col-sm-6">
                                 <div class="widget">                                    
                                         <h3>BUCERIAS DENTIST</h3>
-                                        <p>Pacifico street 57 Bucerias downtown<br> Bucerias Nayarit, México. <br> Phone 01  329 29 82527 <br> dentistabucerias@gmail.com</p>                                    
+                                        <p>Pacifico street 57 Bucerias downtown<br> Bucerias Nayarit, México. <br> Phone 001+ (52) 329 298 2527<br> dentistabucerias@gmail.com</p>                                    
                                     </div>
                         </div>
                         <!--/.col-md-3-->
