segunda actual 20 feb 2019

--- a/services_en.html
+++ b/services_en.html
@@ -103,7 +103,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">                                
-                            <img class="img-responsive" src="images/services/020-checkup.svg">
+                            <img class="img-responsive" src="images/gallery/smiledesign.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Smile design</h3>
@@ -115,7 +115,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/011-tooth-2.svg">
+                            <img class="img-responsive" src="images/gallery/carillas.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Veneers and Crowns Porcelain</h3>
@@ -127,7 +127,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/012-tooth-1.svg">
+                            <img class="img-responsive" src="images/gallery/implantes.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Dental implants</h3>
@@ -139,7 +139,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/008-dentist-2.svg">
+                            <img class="img-responsive" src="images/gallery/resinas.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Resins</h3>
@@ -151,7 +151,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/011-dental-care-3.svg">
+                            <img class="img-responsive" src="images/gallery/endodoncia.JPG"  width="70">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Endodontics</h3>
