--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span> 
                     </button>
-                    <a class="navbar-brand" href="index"><img src="images/AlbaLogo_2.png" alt="logo" width="130" style="margin-bottom: 10px"></a>
+                    <!--<a class="navbar-brand" href="index"><img src="images/AlbaLogo_2.png" alt="logo" width="130" style="margin-bottom: 10px"></a>-->
+                    <a class="navbar-brand" href="index"><img src="" alt="logo" width="130" style="margin-bottom: 10px"></a>
                 </div>
 
                 <div class="collapse navbar-collapse navbar-right">
@@ -157,7 +158,7 @@
 
                  <!--/.item-->
 
-                 <div class="item" style="background-image: url(images/slider/maslimpios.jpg)">
+                 <div class="item" style="background-image: url(images/slider/maslimpios.JPG)">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-7">
