--- a/about-us.html
+++ b/about-us.html
@@ -62,7 +62,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index"><img src="images/AlbaLogo_2.png" alt="logo" width="130" style="margin-bottom: 10px"></a>
+                    <!--<a class="navbar-brand" href="index"><img src="images/AlbaLogo_2.png" alt="logo" width="130" style="margin-bottom: 10px"></a>-->
                 </div>
 
                 <div class="collapse navbar-collapse navbar-right">
